--- a/views/position.erb
+++ b/views/position.erb
@@ -1,12 +1,9 @@
-<% file = File.read("roster.json") %>
-<% roster = JSON.parse(file) %>
-
 <h1><%= @position %></h1>
 
-<% roster.each do |team, players| %>
-  <% players.each do |position, player| %>
-    <% if @position.downcase == position.downcase.gsub(" ", "") %>
-      <li><%= "#{team}: #{player}"%></li>
+  <% @roster.each do |team, players| %>
+    <% players.each do |position, player| %>
+      <% if @position == position %>
+        <li><%= "#{team}: #{player}" %> </li>
+      <% end %>
     <% end %>
   <% end %>
-<% end %>
